# rules_python

./: .bazelrc  AGENTS.md  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  RELEASING.md  internal_dev_deps.bzl
.bazelci/: presubmit.yml
.github/workflows/: create_archive_and_notes.sh  publish.yml  release.yml
docs/: BUILD.bazel  conf.py  devguide.md  environment-variables.md  index.md  pyproject.toml  requirements.txt  toolchains.md
docs/howto/: common-deps-with-multipe-pypi-versions.md  common-deps-with-multiple-pypi-versions.md  get-python-version.md  multi-platform-pypi-deps.md
docs/pypi/: download.md  index.md
examples/: BUILD.bazel
examples/bzlmod/: MODULE.bazel
examples/bzlmod/other_module/: MODULE.bazel
gazelle/: .bazelrc  MODULE.bazel  README.md
gazelle/docs/: annotations.md  directives.md  index.md  installation_and_usage.md
gazelle/python/: BUILD.bazel
gazelle/pythonconfig/: pythonconfig.go
python/: BUILD.bazel  features.bzl  py_binary.bzl  py_cc_link_params_info.bzl  py_info.bzl  py_library.bzl  py_runtime.bzl  py_runtime_info.bzl  py_runtime_pair.bzl  py_test.bzl  versions.bzl
python/config_settings/: BUILD.bazel
python/extensions/: BUILD.bazel  config.bzl
python/private/: BUILD.bazel  attr_builders.bzl  attributes.bzl  common.bzl  common_labels.bzl  current_py_cc_headers.bzl  flags.bzl  get_local_runtime_info.py  hermetic_runtime_repo_setup.bzl  internal_config_repo.bzl  local_runtime_repo.bzl  local_runtime_repo_setup.bzl  py_cc_toolchain_info.bzl  py_cc_toolchain_rule.bzl  py_exec_tools_toolchain.bzl  py_executable.bzl  (+16 more)
(+65 files in other folders)
